[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"


[project]
name = "wsgidav"
dynamic = ["version"]
description = "Generic and extendable WebDAV server based on WSGI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Martin Wendt", email = "wsgidav@wwwendt.de" }]
maintainers = [{ name = "Martin Wendt", email = "wsgidav@wwwendt.de" }]
keywords = ["web", "wsgi", "webdav", "application", "server"]
classifiers = [
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    # NOTE: See also wsgidav_app.MIN_PYTHON_VERSION_INFO
    # "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "defusedxml",
    "Jinja2",
    "json5",
    "PyYAML",
    "passlib",
    "bcrypt>=4.0,<5",
]


[project.optional-dependencies]
pam = ["python-pam"]


[project.urls]
Homepage = "https://github.com/mar10/wsgidav"
"Bug Tracker" = "https://github.com/mar10/wsgidav/issues"
"Source Code" = "https://github.com/mar10/wsgidav"
Documentation = "https://wsgidav.readthedocs.io"
Download = "https://github.com/mar10/wsgidav/releases/latest"
Discussions = "https://github.com/mar10/wsgidav/discussions"


[project.scripts]
wsgidav = "wsgidav.server.server_cli:run"


[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools.package-data]
wsgidav = ["dir_browser/htdocs/*.*"]

[tool.setuptools.dynamic]
version = { attr = "wsgidav.__version__" }


# --- Dev Dependency Groups (PEP 735, managed by uv) ---------------------------

[dependency-groups]
dev = [
    # "cx_Freeze; sys_platform == 'win32'",
    "cheroot",
    "mypy",
    "Paste",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-html",
    # "python-pam; sys_platform != 'win32'",
    # "pywin32; sys_platform == 'win32'",
    "requests",
    "ruff",
    "setuptools",
    "stressor",
    "tox",
    "tox-uv",
    "twine",
    "WebTest",
    "wheel",
    "safety",
    "yabs>=0.6",
]


# ------------------------------------------------------------------------------

[tool.ruff]
# Decrease the maximum line length to 79 characters.
# line-length = 79
# Support Python 3.10+.
target-version = "py310"
src = ["wsgidav", "tests"]


[tool.ruff.lint]
select = [
  "B",  # bugbear
  "E",  # pycodestyle
  "F",  # pyflakes
  "G",  # flake8-logging-format
  "UP", # pyupgrade
  "T",  # print, ...
  # "D",   # pydocstyle
  "I", # isort
# "C",  # codespell
  "W191", # Indentation contains tabs
  "W292", # Trailing whitespace
  "W293", # Blank line contains whitespace
  # "SIM",  # 
]

ignore = [
  "E721",  #  Do not compare types, use `isinstance()`
  "E501",  # Line too long
  "G001",  # Logging statement uses str.format
  "G002",  # Logging statement uses % formatting
  "G004",  # Logging format string does not contain any variables
  "T201",  # `print()` statement found
  "T203",  # `pprint()` statement found
  "UP031", # Use format specifiers instead of percent format
]

[tool.ruff.lint.isort]
known-first-party = ["wsgidav", "tests"]


[tool.codespell]
skip = '.git,*.pdf,*.svg,*.lock,*.css,logs'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''


# --- Pytest and Coverage Settings ---------------------------------------------
[tool.pytest.ini_options]
# addopts = "-ra -q --cov=wsgidav"

testpaths = [
    # ".",
    "tests/*.py"
]

markers = [
    "benchmarks: include slow benchmarks (enable with '-m benchmarks')",
    # "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    # "serial",
]

[tool.coverage.run]
# branch = true
omit = [
    "setup.py",
    "tests/*",
    "wsgidav/mw/impersonator.py",
    "wsgidav/prop_man/couch_property_manager.py",
    "wsgidav/prop_man/mongo_property_manager.py",
    "wsgidav/samples/*",
    "wsgidav/server/run_reloading_server.py",
    "wsgidav/server/server_sample.py",
]

[tool.coverage.report]
precision = 2
# show_missing = true
sort = "Name"
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

exclude_also = [
    # 1. Exclude an except clause of a specific form:
    # "except ValueError:\\n\\s*assume\\(False\\)",
    # 2. Comments to turn coverage on and off:
    # "no cover: start(?s:.)*?no cover: stop",
    # 3. A pragma comment that excludes an entire file:
    # "\\A(?s:.*# pragma: exclude file.*)\\Z",
    "\\A(?s:.*# pragma: exclude-file-from-coverage.*)\\Z",
    ]

[tool.coverage.html]
directory = "build/coverage"
