[bdist_wheel]
; universal = 1

[metadata]
# name = WsgiDAV  # GitHub dependants needs it in setup.py?
version = attr: wsgidav.__version__
author = Martin Wendt
author_email = wsgidav@wwwendt.de
maintainer = Martin Wendt
maintainer_email = wsgidav@wwwendt.de
url = https://github.com/mar10/wsgidav
project_urls =
    Bug Tracker = https://github.com/mar10/wsgidav/issues
    Source Code = https://github.com/mar10/wsgidav
    Documentation = https://wsgidav.readthedocs.io
    Download = https://github.com/mar10/wsgidav/releases/latest
    Discussions = https://github.com/mar10/wsgidav/discussions

description = Generic and extendable WebDAV server based on WSGI
long_description = file: README.md
long_description_content_type = text/markdown
keywords = web, wsgi, webdav, application, server
license = MIT
license_files = LICENSE
classifiers =
    # Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    # NOTE: See also wsgidav_app.MIN_PYTHON_VERSION_INFO
    ; Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
zip_safe = False

# scripts =
#   bin/first.py
#   bin/second.py

install_requires =
    defusedxml
    Jinja2
    json5
    PyYAML

[options.extras_require]
pam = python-pam

[options.packages.find]
where = .
include_package_data = True
exclude =
    tests


[options.package_data]
# * =
# 	CHANGELOG.md
wsgidav =
	dir_browser/htdocs/*.*


[options.data_files]
# . = CHANGELOG.md  # See #315 'CHANGELOG.md is installed into the virtualenv or prefix root directory'


[options.entry_points]
console_scripts =
    wsgidav = wsgidav.server.server_cli:run


[check-manifest]
ignore =
    docs/sphinx-build
    docs/sphinx-build/*


[aliases]
# TODO: this breaks 'setup.py test' which is ought to run the Tox-command:
#test = pytest
